
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct config_set {int dummy; } ;


 unsigned long git_config_ulong (char const*,char const*) ;
 int git_configset_get_value (struct config_set*,char const*,char const**) ;

int git_configset_get_ulong(struct config_set *cs, const char *key, unsigned long *dest)
{
 const char *value;
 if (!git_configset_get_value(cs, key, &value)) {
  *dest = git_config_ulong(key, value);
  return 0;
 } else
  return 1;
}
